--- a/package.json
+++ b/package.json
@@ -43,6 +43,13 @@
     ]
   },
   "devDependencies": {
+    "msw": "^0.49.2",
     "node-sass": "^6.0.1"
+  },
+  "msw": {
+    "workerDirectory": "public"
+  },
+  "engines": {
+    "node": "16.18.1"
   }
 }
